# llvm_triton_deepdive

./: README.md  appendix-a-homework-answers.md  appendix-b-quick-reference.md  appendix-d-references.md  chapter00-前言与导读.md  chapter01-环境搭建与工具链.md  chapter02-C++编译器开发特训.md  chapter03-编译原理速通.md  chapter04-LLVM-IR详解.md  chapter05-LLVM-Pass框架.md  chapter06-LLVM-TableGen.md  chapter07-LLVM后端与代码生成.md  chapter08-MLIR核心概念.md  chapter09-用TableGen定义Dialect.md  chapter10-MLIR-Pass编程.md  chapter11-方言转换框架.md  chapter12-实战-写一个Toy编译器.md  chapter13-Triton编程模型.md  chapter14-Triton编译流水线.md  chapter15-Triton-IR-TT.md  chapter16-TritonGPU-IR与数据布局.md  chapter17-Triton到TritonGPU转换.md  chapter18-TritonGPU到LLVM降级.md  chapter19-NVIDIA后端案例分析.md  chapter20-理解Triton后端接口.md  chapter21-设计第三方后端.md  chapter22-实现Dialect与转换.md  chapter23-代码生成与测试.md  chapter24-集成与调试.md
examples/: _common.sh  patch_docs.py  run_all.sh
examples/appendix-a/: ch02_process_adt.cpp  ch03_ssa_example.ll  ch08_hw1_scf_if.mlir  ch13_saxpy.py  run_verify.sh
examples/chapter00/: cuda_add.cu  run_examples.sh  triton_add.py
examples/chapter01/: hello.c  matmul.c  run_examples.sh  test.mlir  test.ttir
examples/chapter02/: CMakeLists.txt  llvm_adt_demo.cpp  run_examples.sh
examples/chapter03/: codegen_visitor.py  example_before_ssa.c  example_ssa.bc  example_ssa.ll  run_examples.sh
examples/chapter04/: attributes_demo.ll  example.c  factorial.ll  gep_demo.ll  matmul.c  max.ll  run_examples.sh  sum_array.ll
examples/chapter05/: AddToSubPass.cpp  CMakeLists.txt  CountAddPass.cpp  CountFunctionsPass.cpp  CountInstructionsPass.cpp  InsertPrintfPass.cpp  MyPass.cpp  RunPipelineTool.cpp  run_examples.sh  test.ll
examples/chapter06/: MiniDialect.td  run_examples.sh
examples/chapter07/: add.ll  run_examples.sh
examples/chapter08/: CMakeLists.txt  build_add.cpp  run_examples.sh  test_scf_if.mlir
examples/chapter09/: run_examples.sh  sample.mlir
examples/chapter10/: count_ops.py  run_examples.sh  sample.mlir
examples/chapter11/: input.mlir  run_examples.sh
examples/chapter12/: run_examples.sh  test.toy.mlir  toy_frontend.py
examples/chapter13/: run_examples.sh  vector_add.py
examples/chapter14/: run_examples.sh  simple_kernel.py
examples/chapter15/: example.ttir  run_examples.sh
examples/chapter16/: encoding_calc.py  run_examples.sh  vector_add.ttgir
examples/chapter17/: run_examples.sh  sample.ttgir  sample.ttir
examples/chapter18/: run_examples.sh  sample.ptx
(+17 files in other folders)
