cmake_minimum_required(VERSION 3.20)
project(chapter02_examples LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(LLVM REQUIRED CONFIG)
include_directories(${LLVM_INCLUDE_DIRS})
add_definitions(${LLVM_DEFINITIONS})
llvm_map_components_to_libnames(llvm_libs support)
add_executable(llvm_adt_demo llvm_adt_demo.cpp)
target_link_libraries(llvm_adt_demo PRIVATE ${llvm_libs})
